# HorizonFix

./: .clang-tidy  .clangd  .gitignore  CMakeLists.txt  README.md  buildRelease.ps1  vcpkg.json
.github/workflows/: build.yaml
include/: ConfigLoader.hpp  FarClip.hpp  PCH.h  SkirtCull.hpp  SkirtDepth.hpp  WaterSkirt.hpp
package/: HorizonFix.ini
src/: ConfigLoader.cpp  FarClip.cpp  SkirtCull.cpp  SkirtDepth.cpp  WaterSkirt.cpp  main.cpp
